--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-leap-day
+title: Check-list de usabilidade
+description: Fique a vontade para adicionar as favoritos e usar quando quiser 
