--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-cayman
 title: Check-list de usabilidade
 description: Fique a vontade para adicionar as favoritos e usar quando quiser 
